syntax = "proto3";

package opendut.carl.services.metadata_provider;

import "opendut/types/util/metadata.proto";

service MetadataProvider {
  rpc Version(VersionRequest) returns (VersionResponse) {}
}

message VersionRequest {}

message VersionResponse {
  opendut.types.util.VersionInfo version_info = 1;
}
